removed autocomplete directive, added some simple styling and improoved the api

--- a/app/views/contacts.html
+++ b/app/views/contacts.html
@@ -1,20 +1,42 @@
 <h2>Search for a contact!</h2>
-<autocomplete
-  ng-model="contacts.searchedContact"
-  data="contacts.contacts"
-  on-type="contacts.search"
-  on-select="contacts.select"
-  attr-placeholder="Search your phone contacts"
-  >
-</autocomplete>
-{{contacts.selectedContact}}
+<div class="row">
+  <div class="col-lg-6">
+    <div class="input-group">
+      <span class="input-group-addon">
+        <span class="glyphicon glyphicon-search"></span>
+      </span>
+      <input
+        type="text"
+        ng-model="contacts.searchedContact"
+        data="contacts.contacts"
+        ng-keypress="contacts.search(contacts.searchedContact)"
+        placeholder="Search your phone contacts"
+        />
+    </div>
+  </div>
+</div>
+
+<div class="row contacts-wrapper" ng-if="contacts.contactList.length">
+  <div class="panel panel-default">
+    <div class="panel-body">
+      <div ng-repeat="contact in contacts.contactList track by contact.id"
+            class="contact"
+            ng-click="contacts.select(contact)"
+      >
+        <p>{{contact.displayName}}</p>
+        <p class="small">{{contact.phoneNumbers[0].value}}</p>
+      </div>
+    </div>
+  </div>
+</div>
+
 <div class="panel panel-default" ng-if="contacts.selectedContact">
   <div class="panel-body">
     <p>Do you want to give <strong>{{contacts.selectedContact.displayName}}</strong> a call?</p>
     <p>
-      <a ng-href="tel://{{contacts.selectedContact.phoneNumbers[0]}}" class="btn btn-success btn-large">
-        {{contacts.selectedContact.displayName}}
+      <a ng-href="tel://{{contacts.selectedContact.phoneNumbers[0].value}}" class="btn btn-success btn-large">
         <span class="glyphicon glyphicon-earphone"></span>
+        {{contacts.selectedContact.displayName}}
       </a>
     </p>
   </div>
