--- a/app/styles/contacts.css
+++ b/app/styles/contacts.css
@@ -1,13 +1,17 @@
 .contacts-wrapper {
   overflow: auto;
   max-height: 400px;
+  padding: 5px 0;
+  margin-top: -20px;
 }
 
 .contact {
-    border: 1px solid rgba(0, 0, 0, 0.25);
-    transition: all 300ms ease-in-out;
+  border: 1px solid rgba(0, 0, 0, 0.25);
+  transition: all 300ms ease-in-out;
+  margin: 5px;
+  padding: 5px;
 }
 .contact:hover, .contact:active {
-    background-color: rgba(0, 0, 0, 0.25);
-    box-shadow: 0 0 5px #000;
+  background-color: rgba(202, 250, 106, 0.25);
+  box-shadow: 0 0 5px #696969;
 }
