--- a/app/views/contacts.html
+++ b/app/views/contacts.html
@@ -1,18 +1,17 @@
 <h2>Search for a contact!</h2>
 <div class="row">
-  <div class="col-lg-6">
-    <div class="input-group">
-      <span class="input-group-addon">
-        <span class="glyphicon glyphicon-search"></span>
-      </span>
-      <input
-        type="text"
-        ng-model="contacts.searchedContact"
-        data="contacts.contacts"
-        ng-keypress="contacts.search(contacts.searchedContact)"
-        placeholder="Search your phone contacts"
-        />
-    </div>
+  <div class="input-group">
+    <span class="input-group-addon">
+      <span class="glyphicon glyphicon-search"></span>
+    </span>
+    <input
+      type="text"
+      class="form-control"
+      ng-model="contacts.searchedContact"
+      data="contacts.contacts"
+      ng-keypress="contacts.search(contacts.searchedContact)"
+      placeholder="Search your phone contacts"
+      />
   </div>
 </div>
 
