--- a/app/views/contacts.html
+++ b/app/views/contacts.html
@@ -9,7 +9,7 @@
       class="form-control"
       ng-model="contacts.searchedContact"
       data="contacts.contacts"
-      ng-keypress="contacts.search(contacts.searchedContact)"
+      ng-change="contacts.search(contacts.searchedContact)"
       placeholder="Search your phone contacts"
       />
   </div>
