phonegap ready -> geolocation -> map

--- a/app/views/geolocation.html
+++ b/app/views/geolocation.html
@@ -6,5 +6,5 @@
   <p>Navigate the map and select your event location:</p>
   <p ng-if="geolocation.selectedAddress">Would you like to set <strong>{{geolocation.selectedAddress.formatted_address}}</strong> as your event location?</p>
   <p ng-if="geolocation.error">Sorry, we seem to have encountered the following error: <strong>{{geolocation.error}}</strong>. Please try again or contact the administrator.</p>
-  <map center='current-position' geo-fallback-center="[40.74, -74.18]" on-click="geolocation.clickHandler($event)"></map>
+  <map on-click="geolocation.clickHandler($event)"></map>
 </div>
