sample build.. testing geo again

--- a/app/views/geolocation.html
+++ b/app/views/geolocation.html
@@ -8,3 +8,5 @@
   <p ng-if="geolocation.error">Sorry, we seem to have encountered the following error: <strong>{{geolocation.error}}</strong>. Please try again or contact the administrator.</p>
   <map on-click="geolocation.clickHandler($event)"></map>
 </div>
+
+<div id="map-canvas"></div>
