desperate but hopefull try

--- a/app/views/geolocation.html
+++ b/app/views/geolocation.html
@@ -1,4 +1,4 @@
-<div class="geolocation-container loading" ng-class="{'loading':geolocation.loading}">
+<div class="geolocation-container loading" ng-class="{'loading':geolocation.loading}" ng-if="mapsLoaded">
   <div class="loader-container">
     <div class="loader">Just a sec...</div>
   </div>
